--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>bi portfolio</title>
+    <title>hyunsook2</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="https://github.com/hyunsook2.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -10,7 +10,7 @@
 
 <!-- 프로필 부분 -->
 <div id="profile-section">
-    <div style="border: 1px solid #e0e0e0; border-radius: 8px; padding: 24px; width: 150px; text-align: center;">
+    <div style="margin-left:auto; margin-right:auto; border: 1px solid #e0e0e0; border-radius: 8px; padding: 24px; width: 150px; text-align: center;">
         <img src="https://github.com/hyunsook2.png" alt="Profile picture" style="width: 100%; height: auto; border-radius: 50%; object-fit: cover; margin-bottom: 24px;">
         <h2 style="margin: 0 0 5px 0; font-size: 18px;">김현석</h2>
         <p style="margin: 0 0 5px 0; color: #777;">@hyunsook2</p>
@@ -32,27 +32,19 @@
 
     <div id="app" class="container">
         <card data-image="https://images.unsplash.com/photo-1479660656269-197ebb83b540?dpr=2&auto=compress,format&fit=crop&w=1199&h=798&q=80&cs=tinysrgb&crop=">
-            <h1 slot="header">Minty</h1>
+            <h1 slot="header">Team Project Minty</h1>
             <p slot="content">
                 <br>
                 중고거래 플랫폼 민티.
             </p>
         </card>
         <card data-image="https://images.unsplash.com/photo-1479659929431-4342107adfc1?dpr=2&auto=compress,format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=">
-            <h1 slot="header">ERP Groupware</h1>
+            <h1 slot="header">Team Project ERP Groupware</h1>
             <p slot="content">협업을 위해 필요한 다양한 비즈니스 기능을 하나의 플랫폼에서 지원하는 업무용 소프트웨어.</p>
         </card>
         <card data-image="https://images.unsplash.com/photo-1479621051492-5a6f9bd9e51a?dpr=2&auto=compress,format&fit=crop&w=1199&h=811&q=80&cs=tinysrgb&crop=">
             <h1 slot="header">Shop</h1>
-            <p slot="content">쇼핑몰 프로그램.
-                <br>                                            <br>
-            </p>
-        </card>
-        <card data-image="https://images.unsplash.com/photo-1479644025832-60dabb8be2a1?dpr=2&auto=compress,format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=">
-            <h1 slot="header">Console Shop</h1>
-            <p slot="content">
-                <br>
-                콘솔 쇼핑몰 프로그램.
+            <p slot="content">자바 스레드를 이용한 경마게임
                 <br>                                            <br>
             </p>
         </card>
