--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>hyunsook2</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="https://github.com/hyunsook2.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-    crossorigin="anonymous"
-  />
+
 <body>
-    <div class="headtime alert alert-danger">저의 포트폴리오를
+    <!-- Header -->
+<div class="header">
+    <nav class="navbar container navbar-dark" style="background:white;">
+        <a class="navbar-brand" href="/">
+            <img src="image/logo/liyo.png" alt="로고 이미지" width="110px"/>
+        </a>
+        
+        <div class="navbar-nav gap-2">
+            <a class="nav-link menu-a project-button" >프로젝트</a>
+            <a class="nav-link menu-a skill-button" >보유기술</a>
+        </div>
+    </nav>
+</div>
+
+    <!-- <div class="headtime alert alert-danger">저의 포트폴리오를
     <span id="h" style="display: none"></span
     ><span id="h-label" style="display: none">시간</span>
     <span id="m" style="display: none"></span
     ><span id="m-label" style="display: none">분</span> 
     <span id="s">0</span>초나 봐주셔서 감사합니다.
-  </div>
+  </div> -->
 
 <!-- 프로필 부분 -->
 <div id="profile-section">
@@ -52,6 +61,10 @@
           <img src="image/html.png"/>
       </div>
 
+      <div class="img-wrapper faster1">
+        <img src="image/javascript.png"/>
+      </div>
+
       <div class="img-wrapper slower vertical">
           <img src="image/vscide.png"/>
       </div>
@@ -68,10 +81,6 @@
           <img src="image/java.png"/>
       </div>
 
-      <div class="img-wrapper faster1">
-          <img src="image/javascript.png"/>
-      </div>
-
       <div class="img-wrapper slower slower2">
           <img src="image/python.png"/>
       </div>
@@ -79,6 +88,10 @@
       <div class="img-wrapper">
           <img src="image/eclipse.png"/>
       </div>
+
+      <div class="img-wrapper slower slower-down">
+        <img src="image/typescript.png"/>
+     </div>
 
       <div class="img-wrapper slower">
           <img src="image/oracle.png" />
@@ -142,6 +155,24 @@
 <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="js/index.js"></script>
-
+<div class="footer">
+    <div class="footer-content">
+        <div class="footer-top">
+            <p>ddu-ddu-★</p>
+            <p>khr0366@gmail.com</p>
+        </div>
+        <div class="footer-links">
+            <a style="cursor:pointer;" href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=khr0366@gmail.com" target="_blank">
+                <img class="footer-icon" src="image/email.png" alt="email"/>
+            </a>
+            <a style="cursor:pointer;" href="https://open.kakao.com/o/sVw4Uasf">
+                <img class="footer-icon" src="image/kakao.png" alt="Kakao"/>
+            </a>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2023 hyunsook2 ddu ddu</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
