--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         <a class="navbar-brand" href="/">
             <img src="image/logo/liyo.png" alt="로고 이미지" width="110px"/>
         </a>
-        
+            <div class="headtime alert alert-danger">저의 포트폴리오를
+                <span id="h" style="display: none"></span>
+                <span id="h-label" style="display: none">시간</span>
+                <span id="m" style="display: none"></span>
+                <span id="m-label" style="display: none">분</span> 
+                <span id="s">0</span>초나 봐주셔서 감사합니다.
+            </div>
         <div class="navbar-nav gap-2">
             <a class="nav-link menu-a project-button" >프로젝트</a>
             <a class="nav-link menu-a skill-button" >보유기술</a>
@@ -22,13 +28,7 @@
     </nav>
 </div>
 
-    <!-- <div class="headtime alert alert-danger">저의 포트폴리오를
-    <span id="h" style="display: none"></span
-    ><span id="h-label" style="display: none">시간</span>
-    <span id="m" style="display: none"></span
-    ><span id="m-label" style="display: none">분</span> 
-    <span id="s">0</span>초나 봐주셔서 감사합니다.
-  </div> -->
+    
 
 <!-- 프로필 부분 -->
 <div id="profile-section">
@@ -159,10 +159,10 @@
     <div class="footer-content">
         <div class="footer-top">
             <p>ddu-ddu-★</p>
-            <p>khr0366@gmail.com</p>
+            <p>sispa0366@gmail.com</p>
         </div>
         <div class="footer-links">
-            <a style="cursor:pointer;" href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=khr0366@gmail.com" target="_blank">
+            <a style="cursor:pointer;" href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=sispa0366@gmail.com" target="_blank">
                 <img class="footer-icon" src="image/email.png" alt="email"/>
             </a>
             <a style="cursor:pointer;" href="https://open.kakao.com/o/sVw4Uasf">
