--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <!-- Header -->
-<div class="header">
+<div class="nav-header">
     <nav class="navbar container navbar-dark" style="background:white;">
         <a class="navbar-brand" href="/">
             <img src="https://github.com/hyunsook2.png" alt="로고 이미지" width="60px"/>
