--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <!-- Header -->
-<div class="nav-header">
+<!-- <div class="header">
     <nav class="navbar container navbar-dark" style="background:white;">
         <a class="navbar-brand" href="/">
             <img src="https://github.com/hyunsook2.png" alt="로고 이미지" width="60px"/>
@@ -25,7 +25,7 @@
             <a class="nav-link menu-a project-button" >프로젝트</a>
         </div>
     </nav>
-</div>
+</div> -->
 
     
 
