--- a/header.html
+++ b/header.html
@@ -10,27 +10,13 @@
       />
     </a>
     <div class="navbar-nav gap-2">
-      <a class="nav-link menu-a" id="projectLink">Project</a>
-      <a class="nav-link menu-a" id="skillsLink">Skills</a>
-      <a class="nav-link menu-a" href="roulette.html">점메추</a>
+      <a class="nav-link menu-a" href="project.html">Project</a>
+      <a class="nav-link menu-a" href="roulette.html">점심메뉴추천</a>
+      <div class="visitor-counter">
+        <a href="https://hits.seeyoufarm.com">
+          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhyunsook2.github.io&count_bg=%2303072F&title_bg=%2397B43B&icon=staffbase.svg&icon_color=%23FDFDFD&title=%EC%98%A4%EB%8A%98%EC%A0%91%EC%86%8D%EC%9E%90%EC%88%98&edge_flat=false"/>
+      </a>
+    </div>
     </div>
   </nav>
 </div>
-
-<script>
-  var logo = document.getElementById("logo");
-  var skillsLink = document.getElementById("skillsLink");
-  var projectLink = document.getElementById("projectLink");
-
-  logo.addEventListener("click", function () {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  });
-
-  skillsLink.addEventListener("click", function () {
-    window.scrollTo({ top: 551, behavior: "smooth" });
-  });
-
-  projectLink.addEventListener("click", function () {
-    window.scrollTo({ top: 1163, behavior: "smooth" });
-  });
-</script>
