--- a/roulette.html
+++ b/roulette.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>bi portfolio</title>
+    <title>hyunsook2 portfolio</title>
     <link rel="stylesheet" href="css/roulette.css">
     <link rel="icon" href="image/logo/liyo2.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
