--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <title>hyunsook2 portfolio</title>
     <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" href="image/logo/liyo2.png" type="image/png">
+    <link rel="icon" href="image/logo/HSM2.jpg" type="image/jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <script srt="js/header.js"></script>
     <script src="js/layout.js"></script>
+    <script src="js/up.js"></script>
 </head>
 <body>
     <div id="header">
     </div>
     <!-- 프로필 부분 -->
+    
     <div id="profile-section">
         <div class="profile-container">
             <img src="https://github.com/hyunsook2.png" alt="Profile picture" class="profile-picture">
             <h2 class="profile-name">김현석</h2>
             <p class="profile-username">@hyunsook2</p>
             <p class="profile-role">Full-Stack Developer</p>
-            <p class="profile-role">수정중입니다.</p>
+            <p class="profile-role">방문해주셔서 감사합니다. <br> 제가 참여한 프로젝트들도 구경해주세요♡</p>
             <hr class="profile-separator">
             <div class="profile-links">
                 <a href="https://github.com/hyunsook2" class="link-icon"><img src="image/icon/github.png" alt="Velog"></i></a>
@@ -31,12 +34,11 @@
         </div>
          
     </div>
-
-    <div class="line"></div>
-
     <!-- skils 부분 -->
     <div id = "skills-section">
-        <h1 class="title">Skills</h1>
+        <div class="line"></div>
+        <div>
+            <h1 class="title">Skills</h1>
             <article class="Skills_Skills__NOlZH" id="skills">
             <div class="Skills_content__g0p1s">
                 <div class="Skills_tech-stacks-container__wPIVK">
@@ -68,7 +70,7 @@
                         <div class="Skills_title__TH2ju">Framework</div>
                         <img class="Skills_img__f94MA" src="image/skils/Framework/spring.png" alt="">
                         <img class="Skills_img__f94MA" src="image/skils/Framework/SpringBoot.png" alt="">
-                            <img class="Skills_img__f94MA" src="image/skils/Framework/flask.png" alt="">
+                        <img class="Skills_img__f94MA" src="image/skils/Framework/flask.png" alt="">
                         <img class="Skills_img__f94MA" src="image/skils/Framework/bootstrap.png" alt="">
                     </div>
                     <div class="Skills_tech-stacks__f20f8">
@@ -92,36 +94,54 @@
                         <img class="Skills_img__f94MA" src="image/skils/coummunication/StarUML.png" alt="">
                     </div>
                 </div>
-            </div>
-        </article>
+            </article>
+        </div>
     </div>
 
     <div class="line"></div>
 
     <!-- Project 부분 -->
     <div id="project-section">
-        <h1 class="title">Project</h1>
-
+        <h1 class="title">Project</h1><br>
+        <p style="text-align: center;">각 프로젝트카드를 클릭해주시면 자세히 볼수있습니다.</p>
         <div id="app" class="container">
-            <card data-image="image/project/Minty/MintyLogo.png">
+            <card data-image="image/project/Minty/MintyLogo.png" data-id="Minty">
                 <h1 slot="header">Minty</h1>
                 <p slot="content">
                     <br>
                     중고거래 플랫폼 민티.
                 </p>
             </card>
-            <card data-image="image/project/ERPGroupware/RebootLogo.png">
+            <card data-image="image/project/ERPGroupware/RebootLogo.png" data-id="ERPGroupware">
                 <h1 slot="header">ERP Groupware</h1>
-                <p slot="content">협업을 위해 필요한 다양한 비즈니스 기능을 하나의 플랫폼에서 지원하는 업무용 소프트웨어.</p>
+                <p slot="content"><br>협업을 위해 필요한 다양한 비즈니스 기능을 하나의 플랫폼에서 지원하는 업무용 소프트웨어.</p>
             </card>
-            <card data-image="image/project/JavaGame/horse.jpg">
-                <h1 slot="header">Java Game</h1>
-                <p slot="content">자바를 이용한 간단한 경마게임
+            <card data-image="image/project/Shop/ShopLogo.png" data-id="Shop">
+                <h1 slot="header">Shop</h1>
+                <p slot="content">쇼핑몰 프로그램.
                     <br>                                            <br>
+                </p>
+            </card>
+            <card data-image="image/project/horse/horse.jpg" data-id="horse">
+                <h1 slot="header">Horse run</h1>
+                <p slot="content">자바 쓰레드를 이용한 경마 게임
+                    <br>                                            <br>
+                </p>
+            </card>
+            <card data-image="image/project/Portfolio/portfolio.png" data-id="Portfolio">
+                <h1 slot="header">My Portfolio</h1>
+                <p slot="content">
+                    <br>
+                    정적인 웹 페이지로 구성한 Portfolio.
+                    <br>                                                <br>
                 </p>
             </card>
         </div>
     </div>
+
+    <a id="scrollToTopBtn" onclick="scrollToTop()" title="Scroll to Top">
+        <img src="image/icon/up.png" alt="Scroll to Top">
+    </a>
 
     <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
     <script src="js/index.js"></script>
