--- a/header.html
+++ b/header.html
@@ -1,22 +1,16 @@
 <!-- Header -->
 <div class="header">
-  <nav class="navbar container navbar-dark" style="background: white">
-    <a class="navbar-brand" href="index.html">
-      <img
-        src="image/logo/liyo.png"
-        alt="로고 이미지"
-        width="110px"
-        id="logo"
-      />
-    </a>
-    <div class="navbar-nav gap-2">
-      <a class="nav-link menu-a" href="project.html">Project</a>
-      <a class="nav-link menu-a" href="roulette.html">점심메뉴추천</a>
-      <div class="visitor-counter">
-        <a href="https://hits.seeyoufarm.com">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhyunsook2.github.io&count_bg=%2303072F&title_bg=%2397B43B&icon=staffbase.svg&icon_color=%23FDFDFD&title=%EC%98%A4%EB%8A%98%EC%A0%91%EC%86%8D%EC%9E%90%EC%88%98&edge_flat=false"/>
-      </a>
-    </div>
-    </div>
-  </nav>
+    <nav class="navbar container navbar-dark" style="background:white;">
+        <a class="navbar-brand" href="index.html">
+            <img src="image/logo/HSM.jpg" alt="로고 이미지" width="90px"/>
+        </a>
+        
+        <div class="navbar-nav gap-2">
+            <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhyunsook2.github.io&count_bg=%2328E0EB&title_bg=%23522070&icon=&icon_color=%23E7E7E7&title=%EB%B0%A9%EB%AC%B8%EC%9E%90+%EC%88%98&edge_flat=false"/></a>
+            <a class="nav-link menu-a" href="project.html">Project</a>
+            <a class="nav-link menu-a" href="#skills-section">Skills</a>
+            <a class="nav-link menu-a" href="roulette.html">점메추</a>
+            
+        </div>
+    </nav>
 </div>
