--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>hyunsook2 portfolio</title>
     <link rel="stylesheet" href="css/roulette.css">
-    <link rel="icon" href="image/logo/liyo2.png" type="image/png">
+    <link rel="icon" href="image/logo/HSM2.jpg" type="image/jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -21,7 +21,7 @@
     <div class="header3">
         <nav class="navbar container navbar-dark" style="background:white;">
             <a class="navbar-brand" href="index.html">
-                <img src="image/logo/liyo.png" alt="로고 이미지" width="110px"/>
+                <img src="image/logo/HSM.jpg" alt="로고 이미지" width="90px"/>
             </a>
             <div class="navbar-nav gap-2">
                 <a class="nav-link menu-a" href="#Minty">Minty</a>
