--- a/roulette.html
+++ b/roulette.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>hyunsook2 portfolio</title>
     <link rel="stylesheet" href="css/roulette.css">
-    <link rel="icon" href="image/logo/liyo2.png" type="image/png">
+    <link rel="icon" href="image/logo/HSM2.jpg" type="image/jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
