--- a/roulette_header.html
+++ b/roulette_header.html
@@ -2,7 +2,7 @@
 <div class="header">
     <nav class="navbar container navbar-dark" style="background:white;">
         <a class="navbar-brand" href="index.html">
-            <img src="image/logo/liyo.png" alt="로고 이미지" width="110px"/>
+            <img src="image/logo/HSM.jpg" alt="로고 이미지" width="9px"/>
         </a>
         
         <div class="navbar-nav gap-2">
