--- a/project.html
+++ b/project.html
@@ -338,7 +338,7 @@
                         <div class="Projects_img-carousel__e8hwy">
                             <div class="Projects_imgs__datEq" style="left: -703px;">
                                 <div class="Projects_img-wrapper__0b8Tt">
-                                    <img class="Projects_img__OAyqd" src="image/project/Minty/MintyLogo.png" alt="">
+                                    <img class="Projects_img__OAyqd" src="image/project/Minty/Minty.gif" alt="">
                                 </div>
                                 <div class="Projects_img-wrapper__0b8Tt">
                                     <img class="Projects_img__OAyqd" src="/images/projects/what-to-sing/1.jpg" alt="">
