--- a/project.html
+++ b/project.html
@@ -347,7 +347,7 @@ $(document).ready(function() {
                                 웹 애플리케이션의 구조가 명확해지고, 유지보수 및 확장성이 용이해지는 장점을 경험하여 
                                 웹 개발에 대한 이해도를 높이는 데 도움이 된 팀프로젝트 였습니다.
                                 <p></p>
-                                
+                                <div class="ERP-btn">자세히 보기 ▶ README </div>
                             </div>
                          
                             <div class="line"></div>
@@ -593,6 +593,12 @@ $(document).ready(function() {
         window.location.href = 'minty.html';
     });
 
+
+        const button2 = document.querySelector('.ERP-btn');
+
+        button2.addEventListener('click', function() {
+        window.location.href = 'ERP.html';
+    });
     </script>
 </body>
 
